# docs/swagger.json
@@ -28,6 +28,41 @@
                 }
             }
         },
+        "/orders/patients/{patientId}": {
+            "get": {
+                "description": "Find Orders By patientId",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Find Orders By patientId",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Patient ID",
+                        "name": "patientId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/domain.RespOrders"
+                        }
+                    },
+                    "400": {
+                        "description": "請求的body、header驗證失敗",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/orders/{id}": {
             "patch": {
                 "description": "Update Order By Id",
@@ -256,6 +291,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/domain.RespPatientData"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.RespOrders": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.OrderDTO"
                     }
                 },
                 "total": {
